# face_recognition

./: README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml  publish.yml
face_recognition/: __init__.py  api.py  face_detection_cli.py  face_recognition_cli.py
