# bumpversion config — targets pyproject.toml and __init__.py
[bumpversion]
current_version = 1.4.0
commit = True
tag = True

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"
# Note: only bumps the [project] version field; the name field is unaffected

[bumpversion:file:face_recognition/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

# flake8 does not yet support pyproject.toml natively, so its config lives here
[flake8]
exclude =
    .github,
    .idea,
    .eggs,
    examples,
    docs,
    .tox,
    build,
    bin,
    dist,
    tools,
    *.egg-info,
    __init__.py,
    *.yml
max-line-length = 160
